yaml/service-b-deployment.yaml
#################################################################################################
#    The MIT License (MIT)
#    Copyright (c) 2025 Jeremiah Summers
#
#         Permission is hereby granted, free of charge, to any person obtaining a copy
#         of this software and associated documentation files (the "Software"), to deal
#         in the Software without restriction, including without limitation the rights
#         to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#         copies of the Software, and to permit persons to whom the Software is
#         furnished to do so, subject to the following conditions:
#
#    The above copyright notice and this permission notice shall be included in
#    all copies or substantial portions of the Software.
#
#         THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#         IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#         FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#         AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#         LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#         OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
#         THE SOFTWARE.
##################################################################################################

##################################################################################################
# This file defines service accounts, and deployments for the service-b example.
#
# To apply service-b, and it's corresponding service account, and deployment run:
#
#   kubectl apply -f service-b-deployment.yaml
##################################################################################################

##################################################################################################
# Service B (Ruby)
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
    service: service-b
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: service-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-v1
  labels:
    app: service-b
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
      version: v1
  template:
    metadata:
      labels:
        app: service-b
        version: v1
    spec:
      serviceAccountName: services-service-b
      containers:
      - name: service-b
        image: service-b:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
