yaml/gateway.yaml
###################################################################################################
#    The MIT License (MIT)
#    Copyright (c) 2025 Jeremiah Summers
#
#         Permission is hereby granted, free of charge, to any person obtaining a copy
#         of this software and associated documentation files (the "Software"), to deal
#         in the Software without restriction, including without limitation the rights
#         to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#         copies of the Software, and to permit persons to whom the Software is
#         furnished to do so, subject to the following conditions:
#
#    The above copyright notice and this permission notice shall be included in
#    all copies or substantial portions of the Software.
#    
#         THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#         IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#         FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#         AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#         LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#         OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
#         THE SOFTWARE.
##################################################################################################

##################################################################################################
# This file defines the Gateway and Virtual Service for the service-a example.
#
# To apply gateway for service-a, and it's corresponding Virtual Service run:
#
#   kubectl apply -f gateway.yaml
##################################################################################################

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: service-a-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-a
spec:
  hosts:
  - "*"
  gateways:
  - service-a-gateway
  http:
  - match:
    - uri:
        exact: /health
    - uri:
        exact: /call-service-b
    route:
    - destination:
        host: service-a
        port:
          number: 8080
